<resources>
    <string name="app_name">Agartha</string>

    <string name="catat_lari">Catat Lari</string>


    <string name="judul_share">Let\'s Share Your Journey</string>

    <string name="tanggal">Tanggal</string>
    <string name="masukkan_tanggal">Masukkan tanggal</string>

    <string name="jarak_lari">Jarak Lari (km)</string>
    <string name="contoh_jarak">Contoh: 5</string>

    <string name="durasi_lari">Durasi Lari (menit)</string>
    <string name="contoh_durasi">Contoh: 30</string>

    <string name="simpan">Simpan</string>
    <string name="bagikan">Bagikan ke Media Sosial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="halo_user">Halo, Gregorius Frederick Jefferson!</string>
    <string name="selamat_datang">Selamat di aplikasi CatatLari</string>
    <string name="tambah_data">Tambah Data</string>
</resources>